fix: overflow flag name (#7273)

--- a/src/modules/75-cf/pages/feature-flags/FeatureFlagsPage.module.scss
+++ b/src/modules/75-cf/pages/feature-flags/FeatureFlagsPage.module.scss
@@ -66,6 +66,6 @@
 
 .switchTooltip {
   span {
-    overflow-wrap: break-word;
+    word-break: break-all;
   }
 }
